[package]
name = "kvs"
version = "0.1.0"
authors = ["psinghal20 <psinghal20@gmail.com>"]
edition = "2018"
description = "A key value store based on the pingcap/talent-plan project"

[dependencies]
clap = "2.33.0"
structopt = "0.2.18"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"