[package]
name = "kvs"
version = "0.1.0"
authors = ["psinghal20 <psinghal20@gmail.com>"]
edition = "2018"
description = "A key value store based on the pingcap/talent-plan project"

[dependencies]
clap = "2.33.0"
structopt = "0.2.18"
failure = "0.1.5"
failure_derive = "0.1.5"
serde = { version = "1.0", features = ["derive"]  }
serde_json = "1.0.40"
sled = "0.31.0"
slog = "2.5.2"
slog-async = "2.4.0"
slog-term = "2.5.0"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

[[bench]]
name = "bench"
harness = false